[package]
name = "confidential-assets"
version = "0.1.0"
description = "Rust SDK for Movement Network confidential assets — ZK proofs, Twisted ElGamal encryption, and confidential transfers on MoveVM"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

[features]
e2e = []

[[example]]
name = "simple_ca_transfer"
required-features = ["e2e"]

[dependencies]
movement-sdk = { workspace = true, features = ["twisted_ed25519", "ed25519", "faucet"] }
aptos-bcs = { workspace = true }
tokio = { workspace = true }

# `zeroize` is required so per-chunk encryption randomness held as `Scalar` values
# clears on drop — matches the SDK's Twisted Ed25519 private-key handling.
curve25519-dalek = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
thiserror = { workspace = true }
serde = { workspace = true }
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"

# Upstream range-proof prover/verifier shared with the TS SDK (built as WASM there, linked as
# rlib here). Both prove and verify go through this crate's native `rp` module.
movement_rp_wasm = { git = "https://github.com/moveindustries/confidential-asset-wasm-bindings", branch = "main" }
# curve25519-dalek-ng: kangaroo-decryption point conversion in `twisted_el_gamal`.
# (Range-proof prove + verify both go through `movement_rp_wasm`'s native `rp` module.)
curve25519-dalek-ng = "4"
pollard-kangaroo = { git = "https://github.com/distributed-lab/pollard-kangaroo.git", branch = "main", features = ["table48", "table32", "presets"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
